js/js.translator/testData/incremental/invalidation/companionConstVal/lib1/l1.7.kt
open class Class {
    companion object {
        const val CONST_VALUE = 7
    }
}
